--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <form>
     <!-- num 1 -->
-    <input type="number" id="num1" name="num1">
+    <input type="number" id="num" name="num">
     <!-- operator selection -->
     <select name="operator" id="operator">
     <option value="add">plus</option>
